--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   mongo:
-    image: mongo:focal
+    image: mongo
     container_name: mongo
     restart: always
     environment:
@@ -14,7 +14,7 @@ services:
       - 27017:27017
   mongo-express:
     container_name: mongo-express
-    image: mongo-express:0.54
+    image: mongo-express
     restart: always
     ports:
       - 8081:8081
